<resources>
    <string name="app_name">Callisto</string>
    <string name="empresa">Callisto</string>
    <string name="telefono">341375869</string>
    <string name="recibo">Ticket para el Pasajero</string>
    <string name="servicio">Servicio Público</string>
    <string name="ticket_turno">Final Turno</string>
    <string name="ticket_ultimos_viajes">Viaje x Viaje</string>
    <string name="parcial_turno">Parcial Turno</string>
    <string name="ticket_recaudacion">Recaudación Últimos 10 Turnos</string>
    <string name="title_activity_notifications">Notificaciones</string>
    <string name="menu_registro">Registro Usuario</string>
    <string name="menu_ingresar">Ingreso Usuario</string>
    <string name="sign_out">Sign Out</string>
    <string name="revocar">Revocar</string>
    <string name="viaje_asignado">Viaje Asignado</string>
    <string name="nuevo_turno">Nuevo Turno</string>
    <string name="cerrar_turno">Cerrar Turno</string>
    <string name="impresora">Impresora</string>
    <string name="historial_viaje">Historial Turnos</string>
    <string name="perfil">Perfil</string>
    <string name="vacio">No hay Elementos</string>
    <string name="chapa">Habilitación: </string>
    <string name="sin_viaje">No hay Viajes Asignados</string>
    <string name="nav_header_subtitle">info@remisluna.com.ar</string>
    <string name="home">Principal</string>
    <string name="volver_menu">Volver al Menú</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="configuracion">Preferencias</string>
    <string name="menu_acerca">Acerca de Remisluna</string>
    <string name="acerca">Acerca De...</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="menu_ingreso">Ingreso Usuario</string>
    <string name="server_client_id">445416273096-84nmpnrpacbsda8lp916ekbi7tr5qc2i.apps.googleusercontent.com</string>
    <string name="olvido_contraseña">¿Olvidaste la contraseña?</string>
    <string name="clave_cliente">Contraseña</string>
    <string name="mail_cliente">Dirección de Email</string>
    <string name="dialogo_contrasenia">Restablecimiento de contraseña</string>
    <string name="mensaje_contrasenia">Ingrese la dirección de correo electrónico que utilizó para registrarse.
    Le enviaremos un mail con instrucciones para definir una nueva contraseña</string>
    <string name="dialog_aceptar">Aceptar</string>
    <string name="cero_distancia">0</string>
    <string name="cero_tiempo">00:00</string>
    <string name="gps">GPS</string>
    <string name="red">RED</string>
    <string name="parada">Sin Parada</string>
    <string name="tarifa">Tarifa</string>
    <string name="libre">Libre</string>
    <string name="impresora_lista">IMP</string>
    <string name="cero_pesos">0.00</string>
    <string name="nombre_usuario">Nombre y Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="nuevo_viaje">Nuevo Viaje </string>
    <string name="iniciar_viaje">Iniciar Viaje </string>
    <string name="viaje_sin_qr">Viaje sin QR </string>

    <string name="confirmar_cliente">Confirmar Contraseña</string>
    <string name="foto">Foto Perfil</string>

    <string name="no_impresora">Debe conectar la impresora para poder imprimir</string>
    <string name="no_internet">Verifique su conexión a internet</string>
    <string name="inhabilitada">La Remisería se encuentra inhabilitada</string>
    <string name="no_gps">Verifique que el gps no este apagado</string>
    <string name="esperando">esperando...</string>
    <string name="nro_movil">Nro Móvil: </string>
    <string name="nro_viaje">Nro Viaje</string>
    <string name="nro_recibo">Nro Recibo</string>
    <string name="nro_viaje2">Viaje</string>
    <string name="solicitante">Solicitante</string>
    <string name="documento">DNI</string>
    <string name="salida">Salida</string>
    <string name="destino">Destino</string>
    <string name="alarma">Alarma</string>
    <string name="suspender">Suspender</string>
    <string name="terminar">Terminar</string>
    <string name="iniciar">Iniciar Viaje</string>
    <string name="terminar_viaje">Terminar Viaje</string>
    <string name="motivo">Motivo</string>
    <string name="observaciones">Observaciones</string>
    <string name="salir">Ya fue escaneado</string>

    <string name="efectivo">Efectivo</string>
    <string name="sin_qr">Sin QR</string>
    <string name="cuenta_corriente">Cuenta Corriente</string>
    <string name="mercado_pago">Mercado Pago</string>

    <string name="fecha">Fecha</string>
    <string name="hora_inicio">Inicio</string>
    <string name="hora_fin">Fin</string>
    <string name="kms">Kms Recorridos</string>
    <string name="recaudacion">Recaudación</string>
    <string name="ver_viaje">Ver Viajes</string>
    <string name="ticket">Emitir Ticket</string>
    <string name="importe">Importe</string>
    <string name="subtotal">Subtotal</string>
    <string name="bajada">Bajada</string>
    <string name="fichas">Fichas</string>
    <string name="descuento">Descuento</string>
    <string name="espera">Espera</string>
    <string name="total">Total</string>
    <string name="suspendido">SUSPENDIDO</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_preferencias">Preferencias</string>
    <string name="menu_politicas">Políticas de Privacidad</string>
    <string name="menu_terminos">Términos y Condiciones</string>
    <string name="menu_guardar">Guardar</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_ayuda_ventana">Ayuda Pantalla</string>
    <string name="menu_ayuda_ventana_impresa">Ayuda Pantalla Impresa</string>
    <string name="menu_ayuda_app">Ayuda App</string>
    <string name="menu_ayuda_app_impresa">Ayuda App Impresa</string>
    <string name="menu_reportes">Ayuda Para Chofer</string>

    <string name="reportes">Reportes</string>

    <string name="reporte_ayuda">0: Ayuda</string>
    <string name="reporte_parcial">Parcial Turno</string>
    <string name="reporte_turno">Último Final Turno</string>
    <string name="reporte_ultimos">Ult. 10 Finales de Turno</string>
    <string name="reporte_resumen">Viaje x Viaje</string>
    <string name="reporte_impresora">I: Habilitar Ticket</string>
    <string name="reporte_ticket">Ticket</string>
    <string name="reporte_fin_turno">7: Paradas</string>
    <string name="reporte_cta_cte">Cta Cte</string>
    <string name="reporte_viajes">Historial Viajes</string>
    <string name="reporte_viaje">9:Refresco Pantalla</string>
    <string name="refresco">Refresco Pantalla</string>
    <string name="paradas">Paradas</string>
    <string name="boton_impresora">Habilitar Impr</string>
    <string name="fin_turno">5: Inicio y Fin Turnos</string>
    <string name="automatico">A:Viaje de Prueba </string>
    <string name="whatsapps">W:Whatsapps </string>
    <string name="mapa">Mapa Ubicación </string>

    <string name="diurno">Tar. Diurna</string>
    <string name="nocturno">Tar. Nocturna</string>
    <string name="turno_finalizado">SIN TURNO ACTIVO</string>
    <string name="viaje_anulado">Viaje Anulado</string>
    <string name="bateria">Para optimizar el funcionamiento del GPS debe deshabilitarel modo de ahorro de energía</string>
    <string name="background">Ahora se solicitará permisos para poder acceder a la localización en segundo plano.
    Elegir PERMITIR TODO EL TIEMPO</string>
    <string name="texto_ubicacion">La app Callisto recopila datos de ubicación para poder brindar con exactitud los recorridos de los viajes con el fin de poder tarifar adecuadamente los mismos
 y para que los conductores puedan aceptar los pedidos de viajes más cercanos.
 Dicho seguimiento lo hacemos incluso cuando la aplicación está cerrada o no está en uso (segundo plano).
        Para Android 10 y superior los permisos de localización se solicitarán en dos etapas.
        Primero se solicitará un permiso de localización precisa. Se debe elegir la opción MIENTRAS USA ESTA APP.
     Luego la app solicitará un permiso especial para poder acceder a la localización en segundo plano.
    Cuando se accede a PERMISOS DE LOCALIZACIÓN elegir PERMITIR TODO EL TIEMPO.</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://callisto.com.ar/.well-known/assetlinks.json\" }]</string>


</resources>