<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/grupo1">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_notificaciones"
            android:icon="@drawable/ic_notificacion"
            android:title="@string/notificaciones" />



    </group>

    <group android:checkableBehavior="single" android:id="@+id/grupo2">


        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_configuracion"
            android:title="@string/configuracion" />



        <item
            android:id="@+id/nav_acerca"
            android:icon="@drawable/ic_informacion"
            android:title="@string/acerca" />

        <item
            android:id="@+id/nav_cerrar"
            android:icon="@drawable/ic_cerrar"
            android:title="@string/cerrar" />

    </group>

</menu>
