<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background"

    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/id_datos_solicitante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_menu2"
        android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/id_viaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/viaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nro_viaje2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/tamanio_texto"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dato_viaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nro_viaje"

            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/tamanio_texto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_solicitante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_menu2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/solicitante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solicitante"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/tamanio_texto"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dato_solicitante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nro_viaje"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/tamanio_texto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_documento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_menu2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/documento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/documento"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/tamanio_texto"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dato_documento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nro_viaje"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/tamanio_texto" />
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_datos_viaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_menu2"
        android:layout_below="@id/id_datos_solicitante"
        android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/id_salida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <TextView
            android:id="@+id/salida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salida"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/tamanio_texto"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dato_salida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nro_viaje"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/tamanio_texto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_menu2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/destino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destino"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/tamanio_texto"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dato_destino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nro_viaje"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/tamanio_texto" />
    </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/id_numeros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="vertical">
        <TextView
            android:id="@+id/kms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cero_distancia"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/tamanio_numero" />

        <TextView
            android:id="@+id/precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cero_pesos"
            android:layout_below="@id/kms"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_start"
            android:layout_centerHorizontal="true"
            android:textColor="@color/alarma"
            android:textSize="@dimen/tamanio_numero" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/precio"

            android:layout_marginTop="@dimen/margin_top_menu2"
            android:id="@+id/idTicket"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/buttonSinTicket"
                android:layout_width="@dimen/perfil_image_size"
                android:layout_height="@dimen/alto_imagen"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/sin_ticket"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/buttonConTicket"
                android:layout_width="@dimen/perfil_image_size"
                android:layout_height="@dimen/alto_imagen"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/con_ticket"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonAlarma"
            android:layout_below="@id/idTicket"
            android:layout_width="@dimen/campos_width_medio"
            android:layout_height="@dimen/alto_imagen"
            android:background="@android:color/transparent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top_item"
            android:drawableTop="@drawable/boton_alarma"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/buttonSuspender"
            android:layout_below="@id/buttonAlarma"
            android:layout_width="@dimen/campos_width_medio"
            android:layout_height="@dimen/alto_imagen"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/boton_suspender"
            android:layout_marginTop="@dimen/margin_top_item"
            android:layout_centerHorizontal="true"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>


</LinearLayout>